# xrootd-lotman

./: CMakeLists.txt  README.md
.github/workflows/: linter.yml  test.yml
cmake/: FindLotman.cmake  FindXrootd.cmake
rpm/: xrootd-lotman.spec
src/: XrdPurgeLotMan.cc  XrdPurgeLotMan.hh
test/: CMakeLists.txt  xrootd-lotman-tests.cc
